--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "66339b55-5b40-4d14-8f64-063c89b7ed2d"
 authors = ["Rory Hubbard <calvin3h@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+
 [compat]
+DifferentialEquations = "7.15.0"
 julia = "1.11.2"
 
 [extras]
