--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "RobotDynamics.jl"]
 	path = RobotDynamics.jl
 	url = https://github.com/RoboticExplorationLab/RobotDynamics.jl.git
+[submodule "TrajectoryOptimization.jl"]
+	path = TrajectoryOptimization.jl
+	url = https://github.com/RoboticExplorationLab/TrajectoryOptimization.jl.git
