--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,14 @@ authors = ["Rory Hubbard <calvin3h@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
-DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
+RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
+RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
+TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
 [compat]
-DifferentialEquations = "7.15.0"
+RobotDynamics = "0.4.8"
+RobotZoo = "0.3.1"
+TrajectoryOptimization = "0.7.1"
 julia = "1.11.2"
 
 [extras]
