--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "1.0.0-DEV"
 [deps]
 RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
 RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
 [compat]
 RobotDynamics = "0.4.8"
 RobotZoo = "0.3.1"
+StaticArrays = "1.9.13"
 TrajectoryOptimization = "0.7.1"
 julia = "1.11.2"
 
