--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,14 @@ authors = ["Rory Hubbard <calvin3h@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
 RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
 [compat]
+LinearAlgebra = "1.11.0"
 RobotDynamics = "0.4.8"
 RobotZoo = "0.3.1"
 StaticArrays = "1.9.13"
