--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Rory Hubbard <calvin3h@gmail.com> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+Altro = "5dcf52e5-e2fb-48e0-b826-96f46d2e3e73"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
 RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
