--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
 [compat]
+Altro = "0.5.0"
 LinearAlgebra = "1.11.0"
 RobotDynamics = "0.4.8"
 RobotZoo = "0.3.1"
