--- a/Project.toml
+++ b/Project.toml
@@ -12,14 +12,17 @@ RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
 RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-ForwardDiff = "0.10.38"
-LinearAlgebra = "1.11.0"
-StaticArrays = "1.9.13"
-Zygote = "0.7.6"
-julia = "1.11.2"
+Altro = "0.5"
+Clarabel = "0.10"
+ForwardDiff = "0.10"
+LinearAlgebra = "1.11"
+RobotDynamics = "0.4"
+RobotZoo = "0.3"
+StaticArrays = "1.9"
+TrajectoryOptimization = "0.7"
+julia = "1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
