--- a/Project.toml
+++ b/Project.toml
@@ -15,9 +15,14 @@ TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
+Altro = "0.5.0"
+Clarabel = "0.10.0"
 ForwardDiff = "0.10.38"
 LinearAlgebra = "1.11.0"
+RobotDynamics = "0.4.8"
+RobotZoo = "0.3.1"
 StaticArrays = "1.9.13"
+TrajectoryOptimization = "0.7.1"
 Zygote = "0.7.6"
 julia = "1.11.2"
 
