--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RobotDynamics = "38ceca67-d8d3-44e8-9852-78a5596522e1"
 RobotZoo = "74be38bb-dcc2-4b9e-baf3-d6373cd95f10"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
@@ -20,6 +21,7 @@ ForwardDiff = "0.10, 1"
 LinearAlgebra = "1.11"
 RobotDynamics = "0.4"
 RobotZoo = "0.3"
+SparseArrays = "1.11.0"
 StaticArrays = "1.9"
 TrajectoryOptimization = "0.7"
 julia = "1.11"
