--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ TrajectoryOptimization = "c79d492b-0548-5874-b488-5a62c1d9d0ca"
 
 [compat]
 Altro = "0.5"
-Clarabel = "0.10"
+Clarabel = "0.10, 0.11"
 ForwardDiff = "0.10, 1"
 LinearAlgebra = "1.11"
 RobotDynamics = "0.4"
