--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
-Clarabel = "0.10, 0.11"
+Clarabel = "0.11.0"
 ForwardDiff = "0.10, 1"
 LinearAlgebra = "1.11"
 RigidBodyDynamics = "2.5.0"
