--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
@@ -18,6 +19,7 @@ BenchmarkTools = "1.6.0"
 Clarabel = "0.11.0"
 DiffResults = "1.1.0"
 ForwardDiff = "0.10, 1"
+GLMakie = "0.13.6"
 LinearAlgebra = "1.11"
 RigidBodyDynamics = "2.5.0"
 SparseArrays = "1.11.0"
