--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
@@ -24,6 +25,7 @@ DiffResults = "1.1.0"
 ForwardDiff = "0.10, 1"
 GLMakie = "0.13.6"
 Ipopt = "1.12.1"
+JuMP = "1.29.2"
 LinearAlgebra = "1.11"
 NLopt = "1.2.1"
 RigidBodyDynamics = "2.5.0"
