--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -28,6 +29,7 @@ Ipopt = "1.12.1"
 JuMP = "1.29.2"
 LinearAlgebra = "1.11"
 NLopt = "1.2.1"
+ProgressMeter = "1.11.0"
 RigidBodyDynamics = "2.5.0"
 SparseArrays = "1.11.0"
 StaticArrays = "1.9"
