--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,9 @@ jobs:
           - ubuntu-latest
         arch:
           - x64
+    env:
+      JULIA_MAKIE_BACKEND: CairoMakie
+      CI: true
     steps:
       - uses: actions/checkout@v5
       - uses: julia-actions/setup-julia@v2
