--- a/Project.toml
+++ b/Project.toml
@@ -8,20 +8,28 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Clarabel = "61c947e1-3e6d-4ee4-985a-eec8c727bd6e"
 DiffResults = "163ba53b-c6d8-5494-b064-1a9d43ac40c5"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RigidBodyDynamics = "366cf18f-59d5-5db9-a4de-86a9f6786172"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+UnoSolver = "1baa60ac-02f7-4b39-a7a8-2f4f58486b05"
 
 [compat]
 BenchmarkTools = "1.6.0"
 Clarabel = "0.11.0"
 DiffResults = "1.1.0"
 ForwardDiff = "0.10, 1"
+GLMakie = "0.13.6"
 LinearAlgebra = "1.11"
+NLopt = "1.2.1"
+ProgressMeter = "1.11.0"
 RigidBodyDynamics = "2.5.0"
 SparseArrays = "1.11.0"
 StaticArrays = "1.9"
+UnoSolver = "0.1.2"
 julia = "1.11"
 
 [extras]
